@startuml
skinparam classAttributeIconSize 0
hide circle

class Runnable <<interface>> {
  +{abstract} run()
}

package menu {
class MenuItem {
  - menuText : Object
  - menuResponse : Runnable
  + MenuItem(menuText : Object, menuResponse : Runnable)
  + toString() : String <<override>>
  +run() <<override>>
}
class Menu {
  - items : List<MenuItem>
--
  + addMenuItem(item : MenuItem)
  + run(itemNumber : int)
  + toString() : String <<override>>
..
  + {static} getString(prompt : String) : String
  + {static} getInt(prompt : String) : Integer
  + {static} getDouble(prompt : String) : Double
  + {static} getChar(prompt : String) : Character
  + {static} getBoolean(prompt : String) : Boolean
  + {static} selectItemFromArray(prompt : String, array : Object[]) : Integer
  + {static} selectItemFromList(prompt : String, list : List) : Integer
}
}

Runnable <|.. MenuItem


enum Choice <<enum>> {
 -result1 : string
 -win1 : string
 -result2 : string
 -win2 : string
--
 +Rock
 +Paper
 +Scissors
 +Lizard
 +Spock
..
 +Choice(result1 : string, win1 : string, result2 : string, win2 : string)
 +random() : Choice
 +result(other : Choice) : String
}

class RockPaperScissorsLizardSpock {
 -{static}result : string
 +{static}main(args : string[])
 +{static}choose(playerChoice : Choice)
 +{static}quit()
}

RockPaperScissorsLizardSpock - Choice
RockPaperScissorsLizardSpock -- Menu
Menu o- MenuItem
@enduml
